// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reviews in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#FAFAF8",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#3A8F6F",
                  "fontSize": 11,
                  "fontWeight": "700",
                  "letterSpacing": 1.2,
                }
              }
            >
              COMMUNITY
            </Text>
            <Text
              style={
                {
                  "color": "#2C2C28",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Helpful reviews
            </Text>
            <Text
              style={
                {
                  "color": "#8C8C85",
                  "lineHeight": 20,
                }
              }
            >
              Keep the products you love close and share what is worth buying again.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "#D6F0E6",
                  "borderColor": "#F0F0ED",
                  "borderRadius": 30,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderRadius": 22,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#2C2C28",
                  },
                ]
              }
            >
              Your product notes will grow here
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "#8C8C85",
                  },
                ]
              }
            >
              When you review products, this is where your trusted picks and helpful community notes appear.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`reviews in expyricoDark snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#111512",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#D6F0E6",
                  "fontSize": 11,
                  "fontWeight": "700",
                  "letterSpacing": 1.2,
                }
              }
            >
              COMMUNITY
            </Text>
            <Text
              style={
                {
                  "color": "#FAFAF8",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Helpful reviews
            </Text>
            <Text
              style={
                {
                  "color": "#B7BDB7",
                  "lineHeight": 20,
                }
              }
            >
              Keep the products you love close and share what is worth buying again.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "#1F342C",
                  "borderColor": "#2D3A34",
                  "borderRadius": 30,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderRadius": 22,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#FAFAF8",
                  },
                ]
              }
            >
              Your product notes will grow here
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "#B7BDB7",
                  },
                ]
              }
            >
              When you review products, this is where your trusted picks and helpful community notes appear.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;
